# pyGSpreadSheets

./: .gitignore  README.md  pyproject.toml
src/pygspreadsheets/: __init__.py
