[project]
name = "pygspreadsheets"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yusuke_Saito", email = "info@ysaito.dev" }
]
dependencies = [
    "google-api-python-client>=2.116.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
hello = "pygspreadsheets:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pygspreadsheets"]
